# tech-challenge3

./: .gitignore  Dockerfile-backend  Dockerfile-frontend  docker-compose.yaml  pyproject.toml  tclg_3.ipynb
backend/: app.py
backend/controllers/: auth_controller.py  movie_controller.py
frontend/: app.py  image.py  login.py  recommender.py  settings.py
frontend/components/: sidebar.py
tech_challenge3/: notebook.ipynb
